Fix sometimes invisible carousel

--- a/components/carousel/index.styl
+++ b/components/carousel/index.styl
@@ -3,6 +3,7 @@
 height = 480px
 
 .carousel
+  position relative
   width 100%
   margin-bottom 20px
   user-select none
